--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "monolog/monolog": "1.*",
 	    "doctrine/orm": "2.4.*",
-	    "symfony/yaml": "2.1"
+	    "symfony/yaml": "*"
     },
     "autoload": {
         "psr-4": {
